Overflow-y auto ensures no shadow scroll bar when we dont want it

--- a/src/App.scss
+++ b/src/App.scss
@@ -35,6 +35,6 @@ ul.navigation-secondary {
 }
 
 .pf-c-select__menu {
-  overflow-y: scroll;
+  overflow-y: auto;
   max-height: 400px;
 }
